--- a/index.htm
+++ b/index.htm
@@ -6,13 +6,18 @@
     <title></title>
     <link rel="stylesheet" href="css/index.css">
     <script src="js/script.js"></script>
+    <style>
+        label{
+         font-family: 'Comic Sans MS';
+        }
+    </style>
 </head>
 <body>
 
     
-<form id="formulario">
-    <legend><H1><strong>VIA CEP</strong></H1></legend>
-    <label>Cep:
+<form id="formulario" style="font-family: 'Comic Sans MS';">
+    <legend><H1><strong style="font-family: 'Comic Sans MS';">VIA CEP</strong></H1></legend>
+    <label >Cep:
     <input name="cep" type="text"  id="cep" value="" size="10" maxlength="9" onblur="PesquisaCEP(this.value)"></label><br><br>
     <label>Rua:
     <input name="rua" type="text"  id="rua" size="60"></label><br><br>
